# purray

./: CMakeLists.txt  README.md  build.bat  clean.bat  test.bat
examples/: CMakeLists.txt  basic_usage.c
include/: purray.h
include/internal/: purray_config.h
src/: purray.c
